<resources>
    <string name="app_name">SimonDice</string>
    <string name="redString">RED</string>
    <string name="blueString">BLUE</string>
    <string name="yellowString">YELLOW</string>
    <string name="greenString">GREEN</string>
    <string name="playString">PLAY</string>
    <string name="ranking">RANKING</string>
    <string name="returnString">GO BACK</string>
    <string name="goString">GO!</string>
    <string name="setDificulty">LEVEL</string>
</resources>
